# edmap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  vite.config.ts
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
assets/: README.md
specs/001-edmap-nextgen/: feature-ideas-from-doombuilder.md  re-notes.md  ux-spec.md
src/: App.tsx  Cargo.toml  app.rs  build.rs  main.rs  main.tsx  minimal_iwad.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs  theme.rs
src-tauri/src/app/: keybindings.rs  menu.rs  sidebar.rs
src-tauri/src/wad/: lump.rs  mod.rs  texture.rs
src/app/: calculator.rs  commands.rs  config.rs  dialog.rs  export_picture.rs  hittest.rs  keybindings.rs  mem_probe.rs  menu.rs  state.rs  textures.rs  things_table.rs  view3d.rs  view3d_gl.rs  viewer.rs  viewport.rs
src/components/: TVWindow.tsx
src/src/: app.rs  theme.rs
src/src/app/: checks.rs  commands.rs  config.rs  dialog.rs  export_picture.rs  keybindings.rs  map_titles.rs  menu.rs  picker_data.rs  sidebar.rs  state.rs  textures.rs  things_table.rs  viewer.rs  viewport.rs
src/src/wad/: error.rs  map.rs  mod.rs  texture.rs  write.rs
src/styles/: turbo-vision.css
src/wad/: header.rs  lump.rs  mod.rs  write.rs
