# ABOUTME: Rust project for the egui-based EdMap rebuild. No more Tauri/React.
# ABOUTME: Crate name kept as edmap-nextgen; directory rename can come later.

[package]
name = "edmap-nextgen"
version = "2.0.0"
description = "EdMap v1.40 rebuild in Rust + egui"
authors = ["jsh"]
edition = "2021"

[[bin]]
name = "edmap"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rfd = "0.15"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
png = "0.17"
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"
earcutr = "0.5.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["Storage", "Window", "StorageManager"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
