# ABOUTME: Rust backend configuration for the EdMap Next-Gen Tauri application.
# ABOUTME: Defines dependencies and project metadata for the Rust component.

[package]
name = "edmap-nextgen"
version = "0.1.0"
description = "Next-Gen EdMap Editor"
authors = ["Gemini CLI"]
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default Tauri runs in production mode
# use `custom-protocol` for production builds
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
