# ABOUTME: Rust project for the egui-based EdMap rebuild. No more Tauri/React.
# ABOUTME: Crate name kept as edmap-nextgen; directory rename can come later.

[package]
name = "edmap-nextgen"
version = "0.1.0"
description = "EdMap v1.40 rebuild in Rust + egui"
authors = ["jsh"]
edition = "2021"

[[bin]]
name = "edmap"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rfd = "0.15"
